--- a/sass/theme/_navbar.scss
+++ b/sass/theme/_navbar.scss
@@ -58,8 +58,24 @@ nav {
     z-index: 9999;
 
     &.center {
+      @media only screen and (min-width: $medium-screen-up) and (max-width: $large-screen) {
+        left: 52.5%;
+        transform: translateX(-47.5%);
+      }
       left: 50%;
       transform: translateX(-50%);
+
+      img {
+        @media only screen and (max-width: $medium-screen) {
+          width: 50%;
+        }
+        @media only screen and (min-width: $medium-screen-up) and (max-width: $large-screen) {
+          width: 60%;
+        }
+        @media only screen and (min-width: $large-screen-up) {
+          width: 100%;
+        }
+      }
     }
 
     @media #{$medium-and-down} {
@@ -110,6 +126,9 @@ nav {
       font-size: $navbar-font-size;
       color: $primary-color;
       display: block;
+      @media only screen and (min-width: $medium-screen-up) and (max-width: $large-screen) {
+        padding: 0 5px;
+      }
       padding: 0 15px;
       cursor: pointer;
 
